# MAGE

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  runbuild.bat
editor/: CMakeLists.txt
editor/src/: main.cpp  scene1.json  triangle.frag  triangle.vert
engine/: CMakeLists.txt
engine/include/: Component.h  Debug.h  Engine.h  Entity.h  EntityManager.h  Game.h  GameObject.h  Render.h  ResourceManager.h  Scene.h  Systems.h  engine_header.h  engine_systems.h  events.h
engine/src/: Component.cpp  Debug.cpp  Engine.cpp  Entity.cpp  EntityManager.cpp  Events.cpp  Game.cpp  Render.cpp  ResourceManager.cpp  Scene.cpp  SceneLayer.cpp  Systems.cpp  engine_source.cpp  engine_systems.cpp
